--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server/server.js",
-    "build": "npm install && npm install --prefix client && npm run build --prefix client",
-    "start": "node server/server.js"
+    "build": "npm install && npm install --prefix client",
+    "start": "node server/server.js",
+    "client": "npm run dev --prefix client"
   },
   "author": "",
   "license": "ISC",
